# pgsql-gzip

./: CMakeLists.txt  README.md
code/: CMakeLists.txt  pg_gzip.c
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
